--- a/appveyor.yml
+++ b/appveyor.yml
@@ -40,5 +40,5 @@ build_script:
   - if [%COMPILER%]==[MinGW] C:\msys64\usr\bin\bash -lc "export PATH=/mingw%BITS%/bin:$PATH; cd /c/projects/libwdi; ./bootstrap.sh; ./configure --build=%PLATFORM%-w64-mingw32 --host=%PLATFORM%-w64-mingw32 --enable-toggable-debug --enable-examples-build --disable-debug --disable-shared %EXTRA_OPTS% --with-wdkdir=\"C:/Projects/libwdi/wdk\" --with-wdfver=1011 --with-libusb0=\"C:/Projects/libwdi/libusb-win32-bin-1.2.6.0\" --with-libusbk=\"C:/Projects/libwdi/libusbK-3.0.7.0-bin/bin\"; make -j4"
 
 artifacts:
-  - path: C:\projects\libwdi\x64\Release\examples\wdi-simple.exe
+  - path: x64\Release\examples\wdi-simple.exe
     name: libwdi_exe
